--- a/loadingScreen.css
+++ b/loadingScreen.css
@@ -5,10 +5,11 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   z-index: 9999;
+  backdrop-filter: blur(5px) opacity(0.8);
 }
 
 #loading-screen.show {
